--- a/user_superadmin/finance_pengeluaran.html
+++ b/user_superadmin/finance_pengeluaran.html
@@ -379,6 +379,8 @@ License: You must have a valid license purchased only from themeforest(the above
 
                                             <!-- end: Search Form -->
 
+											<!-- begin: Datatable -->
+
                                             <table class="table table-striped- table-bordered table-hover table-checkable" id="table_finance_pengeluaran"></table>
 
         									<!--end: Datatable -->
@@ -553,6 +555,53 @@ License: You must have a valid license purchased only from themeforest(the above
 		<!--begin::Page Scripts(used by this page) -->
 		<script src="assets/js/script/datatable_superadmin.js"></script>
 		<script src="assets/js/custom/datepicker.js" type="text/javascript"></script>
+
+		<script>
+		   // Form Validation
+		   $("#kt_form_pengeluaran").validate({
+			   // define validation rules
+			   rules: {
+				   pengeluaran_kategori : {
+					   required: true
+				   },
+				   pengeluaran_nama : {
+					   required: true
+				   },
+				   pengeluaran_jumlah : {
+					   required: true
+				   },
+				   pengeluaran_harga : {
+					   required: true
+				   },
+				   pengeluaran_penerima : {
+					   required: true
+				   },
+				   pengeluaran_jenis_pembayaran : {
+					   required: true
+				   }
+			   },
+
+			   invalidHandler: function(event, validator) {
+				   KTUtil.scrollTop();
+			   },
+			   submitHandler: function(form) {
+				   //form[0].submit(); // submit the form
+			   }
+		   });
+
+		   // Sweetalert
+		   $('#kt_sweetalert_berhasil_modal').click(function(e) {
+			   swal.fire({
+				   title: "Berhasil",
+				   text: "Pengeluaran berhasil ditambahkan",
+				   type: "success",
+				   confirmButtonText: "Ok",
+				   confirmButtonClass: "btn btn-brand"
+			   }).then(function(result) {
+				   // location.reload();
+			   });
+		   });
+		</script>
 
 		<!--end::Page Scripts -->
 	</body>
