--- a/user_superadmin/hr_karyawan_detail.html
+++ b/user_superadmin/hr_karyawan_detail.html
@@ -344,31 +344,173 @@ License: You must have a valid license purchased only from themeforest(the above
 								<div class="col-12">
 
                                     <!--begin::Portlet-->
-									<div class="kt-portlet">
+                                    <div class="kt-portlet">
 										<div class="kt-portlet__head">
 											<div class="kt-portlet__head-label">
-												<span class="kt-portlet__head-icon">
+                                                <span class="kt-portlet__head-icon">
 													<i class="flaticon2-cube-1"></i>
 												</span>
 												<h3 class="kt-portlet__head-title">
 													Karyawan
 												</h3>
 											</div>
+											<div class="kt-portlet__head-toolbar">
+												<!-- <div class="offset-3 col-9 input-daterange input-group" id="kt_datepicker" style="padding:0px">
+													<input readonly type="text" class="form-control kt-input" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="kt_search_waktu"/>
+													<div class="input-group-append">
+														<span class="input-group-text">
+															<i class="la la-calendar"></i>
+														</span>
+													</div>
+												</div> -->
+											</div>
 										</div>
 										<div class="kt-portlet__body">
-											<!-- begin: Datatable -->
-                                            <table class="table table-striped- table-bordered table-hover table-checkable" id="table_karyawan"></table>
-
-        									<!--end: Datatable -->
-										</div>
-										<div class="kt-portlet__foot kt-hidden">
-											<div class="row">
-												<div class="col-lg-6">
-													Portlet footer:
+											<ul class="nav nav-tabs nav-fill" role="tablist">
+												<li class="nav-item">
+													<a class="nav-link active" data-toggle="tab" href="#tab-biodata">Biodata</a>
+												</li>
+												<li class="nav-item">
+													<a class="nav-link" data-toggle="tab" href="#tab-treatment">Treatment</a>
+												</li>
+												<li class="nav-item">
+													<a class="nav-link" data-toggle="tab" href="#tab-kehadiran">Kehadiran</a>
+												</li>
+												<li class="nav-item">
+													<a class="nav-link" data-toggle="tab" href="#tab-payroll">Payroll</a>
+												</li>
+											</ul>
+											<div class="tab-content">
+												<div class="tab-pane active" id="tab-biodata" role="tabpanel">
+													<form id="">
+                                                        <div class="row">
+                                                            <div class="col-6">
+                                                                <div class="form-group row">
+                													<label for="example-text-input" class="col-3 col-form-label">Nama</label>
+                													<div class="col-9">
+                														<input type="text" class="form-control" name="karyawan_nama" placeholder="Nama">
+                													</div>
+                												</div>
+                                                                <div class="form-group row">
+                													<label for="example-text-input" class="col-3 col-form-label">Alamat</label>
+                													<div class="col-9">
+                														<input type="text" class="form-control" name="karyawan_alamat" placeholder="Alamat">
+                													</div>
+                												</div>
+                                                                <div class="form-group row">
+                													<label for="example-text-input" class="col-3 col-form-label">Email</label>
+                													<div class="col-9">
+                														<input type="text" class="form-control" name="karyawan_email" placeholder="Email">
+                													</div>
+                												</div>
+                                                                <div class="form-group row">
+                													<label for="example-text-input" class="col-3 col-form-label">No. HP</label>
+                													<div class="col-9">
+                														<input type="text" class="form-control" name="karyawan_telepon" placeholder="No. HP">
+                													</div>
+                												</div>
+                                                                <div class="form-group row">
+                													<label for="example-text-input" class="col-3 col-form-label">Username</label>
+                													<div class="col-9">
+                														<input type="text" class="form-control" name="karyawan_username" placeholder="Username">
+                													</div>
+                												</div>
+                                                                <div class="form-group row">
+                													<label for="example-text-input" class="col-3 col-form-label">Password</label>
+                													<div class="col-9">
+                														<input type="text" class="form-control" name="karyawan_password" placeholder="Password">
+                													</div>
+                												</div>
+                                                            </div>
+                                                            <div class="col-6">
+                                                                <div class="form-group row">
+                													<label for="example-text-input" class="col-3 col-form-label">Gaji Pokok</label>
+                													<div class="col-9">
+                														<input type="text" class="form-control" name="karyawan_gaji" placeholder="Gaji Pokok">
+                													</div>
+                												</div>
+                                                                <div class="form-group row">
+                													<label for="example-text-input" class="col-3 col-form-label">Tipe Komisi</label>
+                													<div class="col-9">
+                														<input type="text" class="form-control" name="karyawan_komisi" placeholder="Tipe Komisi">
+                													</div>
+                												</div>
+                                                                <div class="form-group row">
+                													<label for="example-text-input" class="col-3 col-form-label">Bagian</label>
+                													<div class="col-9">
+                														<input type="text" class="form-control" name="karyawan_bagian" placeholder="Bagian">
+                													</div>
+                												</div>
+                                                            </div>
+                                                            <div class="col-12">
+                                                                <div class="row justify-end">
+                                                                    <button type="button" class="btn btn-success col-2" data-toggle="modal" data-target="#kt_modal_treatment_selesai">Edit</button>&nbsp;
+                                                                    <button type="button" class="btn btn-danger col-2">Delete</button>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </form>
 												</div>
-												<div class="col-lg-6">
-													<button type="submit" class="btn btn-primary">Submit</button>
-													<span class="kt-margin-left-10">or <a href="#" class="kt-link kt-font-bold">Cancel</a></span>
+												<div class="tab-pane" id="tab-treatment" role="tabpanel">
+													<form class="kt-form kt-form--fit kt-margin-b-10">
+		    											<div class="row justify-space-between">
+															<div class="col-4 input-daterange input-group" id="">
+																<input readonly type="text" class="form-control kt-input" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="kt_search_waktu"/>
+																<div class="input-group-append">
+																	<span class="input-group-text">
+																		<i class="la la-calendar"></i>
+																	</span>
+																</div>
+															</div>
+															<div class="col-4">
+			    												<input type="text" class="form-control kt-input" placeholder="Search" id="kt_search_all">
+															</div>
+		    											</div>
+		    										</form>
+													<table class="table table-striped- table-bordered table-hover table-checkable" id="table_karyawan_treatment"></table>
+												</div>
+												<div class="tab-pane" id="tab-kehadiran" role="tabpanel">
+													<form class="kt-form kt-form--fit kt-margin-b-10">
+		    											<div class="row justify-space-between">
+															<div class="col-4 input-daterange input-group" id="">
+																<input readonly type="text" class="form-control kt-input_2" name="start" placeholder="Pilih Tanggal" data-col-index="1" id="kt_search_waktu_2"/>
+																<div class="input-group-append">
+																	<span class="input-group-text">
+																		<i class="la la-calendar"></i>
+																	</span>
+																</div>
+															</div>
+															<div class="col-4">
+			    												<input type="text" class="form-control kt-input" placeholder="Search" id="kt_search_all">
+															</div>
+		    											</div>
+		    										</form>
+													<table class="table table-striped- table-bordered table-hover table-checkable" id="table_karyawan_kehadiran"></table>
+												</div>
+												<div class="tab-pane" id="tab-payroll" role="tabpanel">
+													<form class="kt-form kt-form--fit kt-margin-b-10">
+		    											<div class="row justify-end">
+															<div class="col-4 input-daterange input-group" id="">
+																<input readonly type="text" class="form-control kt-input_month" name="start" placeholder="Pilih Bulan" data-col-index="1" id="kt_search_month"/>
+																<div class="input-group-append">
+																	<span class="input-group-text">
+																		<i class="la la-calendar"></i>
+																	</span>
+																</div>
+															</div>
+		    											</div>
+		    										</form>
+													<table class="table table-striped- table-bordered table-hover table-checkable" id="table_karyawan_payroll"></table>
+													<div class="col-12" style="padding:0;">
+														<div class="col-12 justify-end" style="padding:0; margin-bottom: 10px;">
+															<h4 class="kt-portlet__head-titlek">
+																Total: <span class="color-main-dark" name="total_payroll">Rp 3.900.000,00</span>
+															</h4>
+														</div>
+														<div class="col-12 justify-end" style="padding:0;">
+															<button type="button" class="btn btn-danger col-2">Delete</button>
+														</div>
+													</div>
 												</div>
 											</div>
 										</div>
